# Illuminate

./: .gitignore  CMakeLists.txt  Doxyfile.in  Illuminate.leo  LICENSE  annotated.html  class_illuminate_1_1_indented_output_visitor-members.html  class_illuminate_1_1_indented_output_visitor.html  class_illuminate_1_1_printer_result_visitor-members.html  class_illuminate_1_1_printer_result_visitor.html  class_illuminate_1_1_result_visitor-members.html  class_illuminate_1_1_result_visitor.html  class_illuminate_1_1_root-members.html  class_illuminate_1_1_root.html  class_illuminate_1_1_suite-members.html  class_illuminate_1_1_suite.html  class_illuminate_1_1_test-members.html  class_illuminate_1_1_test.html  class_illuminate_1_1_test_worker-members.html  class_illuminate_1_1_test_worker.html  class_illuminate_1_1_test_worker_group-members.html  class_illuminate_1_1_test_worker_group.html  classes.html  color__codes_8hpp.html  color__codes_8hpp_source.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  future_8hpp_source.html  globals.html  globals_defs.html  globals_func.html  group___b_o_o_l_e_a_n___c_h_e_c_k_s.html  group___c_h_e_c_k_s.html  group___d_e_c_l_a_r_a_t_i_o_n_s.html  group___e_q___c_h_e_c_k_s.html  group___f_a_l_s_e___c_h_e_c_k_s.html  group___f_o_r_c_e_d___f_a_i_l_u_r_e_s.html  (+56 more)
documentation/: CMakeLists.txt  main_page.dox  organizing_tests.dox  writing_tests.dox
examples/: CMakeLists.txt  chapter1-all-relations.cpp  chapter1-all-relations.out  chapter1-approximate-equality.cpp  chapter1-approximate-equality.out  chapter1-boolean-checks.cpp  chapter1-boolean-checks.out  chapter1-forced-failure.cpp  chapter1-forced-failure.out  chapter1-simple-test-broken.cpp  chapter1-simple-test-broken.out  chapter1-simple-test.out  chapter1-suffix-variants.cpp  chapter1-suffix-variants.out  chapter1-test-with-multiple-asserts.cpp  chapter1-test-with-multiple-asserts.out  chapter1-test-with-multiple-expects-and-asserts.cpp  chapter1-test-with-multiple-expects-and-asserts.out  chapter1-test-with-multiple-expects.cpp  chapter1-test-with-multiple-expects.out  chapter2-dont-test.cpp  chapter2-dont-test.out  chapter2-multiple-test-cases-1.cpp  chapter2-multiple-test-cases-2.cpp  chapter2-multiple-test-cases-3.cpp  chapter2-multiple-test-cases-same-file.cpp  chapter2-multiple-test-cases-same-file.out  chapter2-must-test.cpp  chapter2-must-test.out  chapter2-nesting.cpp  chapter2-nesting.out  chapter2-test-suite-multiple-files-1.cpp  chapter2-test-suite-multiple-files-2.cpp  chapter2-test-suite-multiple-files.out  chapter2-test-suites.cpp  introduction-example.cpp  introduction-example.out  reference-ASSERT_EQ.cpp  reference-ASSERT_EQ.out  reference-ASSERT_EQ_LABELED.cpp  (+155 more)
includes/: CMakeLists.txt  illuminate.hpp
includes/boost/process/: operations.hpp
includes/illuminate/: color_codes.hpp  core.hpp  exceptions.hpp  future.hpp  macros.hpp  runners.hpp  slave.hpp  task.hpp  test_printers.hpp  test_result_callback.hpp  test_tree.hpp  test_worker.hpp  test_worker_group.hpp  visitor.hpp
includes/illuminate/test_processors/: future.hpp  runner.hpp
includes/illuminate/test_result_fetchers/: future.hpp
includes/illuminate/visitors/: ansi_test_runner.hpp  indented_output.hpp  plain_printer.hpp  plain_test_runner.hpp  printer.hpp  queuer.hpp  result.hpp  test_future.hpp  test_queue.hpp  test_queuer.hpp  test_workers.hpp
includes/illuminate/visitors/result/: future.hpp  printer.hpp  runner.hpp
includes/visitors/: plain_printer.hpp
package/: CMakeLists.txt  Illuminate-config-version.cmake.in  Illuminate-config.cmake.in  IlluminateConfig-version.cmake.in  IlluminateConfig.cmake.in
search/: all_61.html  all_63.html  all_64.html  all_65.html  all_66.html  all_67.html  all_69.html  all_6c.html  all_6d.html  all_6e.html  all_6f.html  all_70.html  all_72.html  all_73.html  all_74.html  all_75.html  all_76.html  all_77.html  classes_63.html  classes_66.html  classes_69.html  classes_6e.html  classes_70.html  classes_72.html  classes_73.html  classes_74.html  classes_76.html  defines_61.html  defines_64.html  defines_65.html  defines_66.html  defines_6d.html  defines_74.html  enums_61.html  enums_63.html  enumvalues_61.html  enumvalues_6e.html  enumvalues_70.html  files_63.html  files_69.html  (+38 more)
sources/: CMakeLists.txt  color_codes.cpp  exceptions.cpp  main.cpp  node.cpp  root.cpp  runners.cpp  slave.cpp  suite.cpp  test.cpp  test_printers.cpp  test_worker.cpp  test_worker_group.cpp  utils.cpp
sources/test_processors/: future.cpp  runner.cpp
sources/test_result_fetchers/: future.cpp
sources/visitors/: ansi_test_runner.cpp  indented_output.cpp  plain_printer.cpp  plain_test_runner.cpp  printer.cpp  queuer.cpp  result.cpp  result.hpp  test_future.cpp  test_queue.cpp  test_queuer.cpp
sources/visitors/result/: future.cpp  printer.cpp  runner.cpp
tests/: CMakeLists.txt  check_for_failure.cpp  checks.cpp  examples.cpp  fail.cpp  fake1.cpp  fake2.cpp  skip.cpp  template.cpp  test.cpp  test2.cpp
